OldArchive/477fac4a37bc0a728ccfb229e4db900b-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In constructor ‘Foo::Foo(const int*)’:
main.cpp:9:9: error: uninitialized member ‘Foo::p_abstract_const’ with ‘const’ type ‘const int* const’ [-fpermissive]
         Foo(const int* const p_new_concrete_const)
         ^
main.cpp:11:31: error: assignment of read-only member ‘Foo::p_abstract_const’
             p_abstract_const  = p_new_concrete_const;
                               ^
